fixing pickpack expiry logic and alignment issue

--- a/EduquayWeb/ClientApp/src/app/chc-module/chc-picknpack/chc-picknpack.component.css
+++ b/EduquayWeb/ClientApp/src/app/chc-module/chc-picknpack/chc-picknpack.component.css
@@ -50,12 +50,13 @@ padding: 4px 11px;
 }
 label.new-control.new-checkbox.checkbox-outline-primary{
     color: #FFFFFF;
-font-weight: 600;
-font-size: 13px;
-border: none;
-text-align: center;
-letter-spacing: 1px;
-text-transform: initial;
+    font-weight: 600;
+    font-size: 13px;
+    border: none;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: initial;
+    left: 4px;
 }
 .leftspace {
     left: -5px !important;
